@@ -76,7 +76,11 @@ use base qw(Rex::Exporter);
 
 use vars qw(%file_handles);
 
-=head2 symlink($from, $to)
+=head2 Changing content
+
+These commands are supposed to change the contents of the file system.
+
+=head3 symlink($from, $to)
 
 This function will create a symlink from $from to $to.
 
@@ -110,7 +114,7 @@ sub symlink {
   return 1;
 }
 
-=head2 ln($from, $to)
+=head3 ln($from, $to)
 
 ln is an alias for I<symlink>
 
@@ -120,7 +124,7 @@ sub ln {
   &symlink(@_);
 }
 
-=head2 unlink($file)
+=head3 unlink($file)
 
 This function will remove the given file.
 
@@ -170,7 +174,7 @@ sub unlink {
 
 }
 
-=head2 rm($file)
+=head3 rm($file)
 
 This is an alias for unlink.
 
@@ -180,7 +184,7 @@ sub rm {
   &unlink(@_);
 }
 
-=head2 rmdir($dir)
+=head3 rmdir($dir)
 
 This function will remove the given directory.
 
@@ -237,7 +241,7 @@ sub rmdir {
   }
 }
 
-=head2 mkdir($newdir)
+=head3 mkdir($newdir)
 
 This function will create a new directory.
 
@@ -376,7 +380,7 @@ sub mkdir {
   return 1;
 }
 
-=head2 chown($owner, $file)
+=head3 chown($owner, $file)
 
 Change the owner of a file or a directory.
 
@@ -400,7 +404,7 @@ sub chown {
   $fs->chown( $user, $file, @opts ) or die("Can't chown $file");
 }
 
-=head2 chgrp($group, $file)
+=head3 chgrp($group, $file)
 
 Change the group of a file or a directory.
 
@@ -424,7 +428,7 @@ sub chgrp {
   $fs->chgrp( $group, $file, @opts ) or die("Can't chgrp $file");
 }
 
-=head2 chmod($mode, $file)
+=head3 chmod($mode, $file)
 
 Change the permissions of a file or a directory.
 
@@ -448,7 +452,7 @@ sub chmod {
   $fs->chmod( $mode, $file, @opts ) or die("Can't chmod $file");
 }
 
-=head2 rename($old, $new)
+=head3 rename($old, $new)
 
 This function will rename $old to $new. Will return 1 on success and 0 on failure.
 
@@ -501,7 +505,7 @@ sub rename {
     ->report_resource_end( type => "rename", name => "$old -> $new" );
 }
 
-=head2 mv($old, $new)
+=head3 mv($old, $new)
 
 mv is an alias for I<rename>.
 
@@ -511,7 +515,7 @@ sub mv {
   return &rename(@_);
 }
 
-=head2 cp($source, $destination)
+=head3 cp($source, $destination)
 
 cp will copy $source to $destination (it is recursive)
 
@@ -556,7 +560,11 @@ sub cp {
     ->report_resource_end( type => "cp", name => "$source -> $dest" );
 }
 
-=head2 list_files("/path");
+=head2 Not changing content
+
+These commands should not change the contents of the file system.
+
+=head3 list_files("/path");
 
 This function list all entries (files, directories, ...) in a given directory and returns a array.
 
@@ -578,7 +586,7 @@ sub list_files {
   return @ret;
 }
 
-=head2 ls($path)
+=head3 ls($path)
 
 Just an alias for I<list_files>
 
@@ -588,7 +596,7 @@ sub ls {
   return list_files(@_);
 }
 
-=head2 stat($file)
+=head3 stat($file)
 
 This function will return a hash with the following information about a file or directory.
 
@@ -640,7 +648,7 @@ sub stat {
   return %ret;
 }
 
-=head2 is_file($file)
+=head3 is_file($file)
 
 This function tests if $file is a file. Returns 1 if true. 0 if false.
 
@@ -665,7 +673,7 @@ sub is_file {
   return $fs->is_file($file);
 }
 
-=head2 is_dir($dir)
+=head3 is_dir($dir)
 
 This function tests if $dir is a directory. Returns 1 if true. 0 if false.
 
@@ -691,7 +699,7 @@ sub is_dir {
 
 }
 
-=head2 is_symlink($file)
+=head3 is_symlink($file)
 
 This function tests if $file is a symlink. Returns 1 if true. 0 if false.
 
@@ -716,7 +724,7 @@ sub is_symlink {
   return $fs->is_symlink($path);
 }
 
-=head2 is_readable($file)
+=head3 is_readable($file)
 
 This function tests if $file is readable. It returns 1 if true. 0 if false.
 
@@ -742,7 +750,7 @@ sub is_readable {
   return $fs->is_readable($file);
 }
 
-=head2 is_writable($file)
+=head3 is_writable($file)
 
 This function tests if $file is writable. It returns 1 if true. 0 if false.
 
@@ -768,7 +776,7 @@ sub is_writable {
   return $fs->is_writable($file);
 }
 
-=head2 is_writeable($file)
+=head3 is_writeable($file)
 
 This is only an alias for I<is_writable>.
 
@@ -780,7 +788,7 @@ sub is_writeable {
   is_writable(@_);
 }
 
-=head2 readlink($link)
+=head3 readlink($link)
 
 This function returns the link endpoint if $link is a symlink. If $link is not a symlink it will die.
 
@@ -814,7 +822,7 @@ sub readlink {
   return $link;
 }
 
-=head2 chdir($newdir)
+=head3 chdir($newdir)
 
 This function will change the current workdirectory to $newdir. This function currently only works local.
 
@@ -831,7 +839,7 @@ sub chdir {
   CORE::chdir( $_[0] );
 }
 
-=head2 cd($newdir)
+=head3 cd($newdir)
 
 This is an alias of I<chdir>.
 
@@ -841,7 +849,7 @@ sub cd {
   &chdir( $_[0] );
 }
 
-=head2 df([$device])
+=head3 df([$device])
 
 This function returns a hashRef reflecting the output of I<df>
 
@@ -908,7 +916,7 @@ sub _parse_df {
   return $ret;
 }
 
-=head2 du($path)
+=head3 du($path)
 
 Returns the disk usage of $path.
 
@@ -931,7 +939,7 @@ sub du {
   return $du;
 }
 
-=head2 mount($device, $mount_point, @options)
+=head3 mount($device, $mount_point, @options)
 
 Mount devices.
 
@@ -1122,7 +1130,7 @@ sub mount {
     ->report_resource_end( type => "mount", name => "$mount_point" );
 }
 
-=head2 umount($mount_point)
+=head3 umount($mount_point)
 
 Unmount device.
 
@@ -1176,7 +1184,7 @@ sub umount {
     ->report_resource_end( type => "umount", name => "$mount_point" );
 }
 
-=head2 glob($glob)
+=head3 glob($glob)
 
  task "glob", "server1", sub {
    my @files_with_p = grep { is_file($_) } glob("/etc/p*");
